# tdf

./: .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  TODO.txt  build_most_optimized.sh  shell.nix
.github/workflows/: release.yml  rust.yml
benches/: for_profiling.rs  rendering.rs  utils.rs
scripts/: build_dbg_info.sh  build_most_optimized.sh
src/: config.rs  converter.rs  history.rs  kitty.rs  lib.rs  main.rs  renderer.rs  skip.rs  tui.rs
