[package]
name = "tdf"
version = "0.1.0"
authors = ["June Welker <junewelker@gmail.com>"]
edition = "2021"
description = "A terminal viewer for PDFs"
readme = "README.md"
homepage = "https://github.com/itsjunetime/tdf"
repository = "https://github.com/itsjunetime/tdf"
license = "MPL-2.0"
keywords = ["pdf", "tui", "cli", "terminal"]
categories = ["command-line-utilities", "text-processing", "visualization"]
default-run = "tdf"

[[bin]]
name = "tdf"

# lib only exists for benching
[lib]
name = "tdf"

[dependencies]
poppler-rs = { version = "0.24.1", default-features = false, features = ["v23_7"] }
cairo-rs = { version = "0.20.0", default-features = false, features = ["png"] }
# we're using this branch because it has significant performance fixes that I'm waiting on responses from the upstream devs to get upstreamed. See https://github.com/ratatui-org/ratatui/issues/1116
ratatui = { git = "https://github.com/itsjunetime/ratatui.git" }
# ratatui = { path = "./ratatui" }
# We're using this to have the vb64 feature (for faster base64 encoding, since that does take up a good bit of time when converting images to the Box<dyn ratatui_image::Protocol>. It also just includes a few more features that I'm waiting on main to upstream
ratatui-image = { git = "https://github.com/itsjunetime/ratatui-image.git", branch = "vb64_on_personal", features = ["rustix", "vb64"], default-features = false }
# ratatui-image = { path = "./ratatui-image", features = ["rustix", "vb64"], default-features = false }
crossterm = { version = "0.28.1", features = ["event-stream"] }
image = { version = "0.25.1", features = ["png", "rayon"], default-features = false }
notify = { version = "7.0.0", features = ["crossbeam-channel"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
futures-util = { version = "0.3.30", default-features = false }
glib = "0.20.0"
itertools = "*"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
xflags = "0.4.0-pre.2"

# for tracing with tokio-console
console-subscriber = { version = "0.4.0", optional = true }

[profile.production]
inherits = "release"
lto = "fat"

[features]
default = []
tracing = ["tokio/tracing", "dep:console-subscriber"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
cpuprofiler = "0.0.4"

[[bench]]
name = "rendering"
harness = false

[[bin]]
name = "for_profiling"
path = "./benches/for_profiling.rs"
